docs: update eclair section of build custom node images